--- a/zn.html
+++ b/zn.html
@@ -2,35 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>张囡的网页</title>
+    <title>张囡</title>
     <link rel="stylesheet" href="css/lg.css" media="screen and (min-width:1200px)">
     <link rel="stylesheet" href="css/md.css" media="screen and (min-width:992px) and (max-width:1200px)">
     <link rel="stylesheet" href="css/sm.css" media="screen and (min-width:768px) and (max-width:992px)">
     <link rel="stylesheet" href="css/xs.css" media="screen and (max-width:768px)">
     <link rel="stylesheet" href="css/tongyong.css">
+    <script src="js/jquery.js"></script>
 </head>
 <body>
     <!--banner开始-->
     <div class="banner">
         <div class="text1">你若盛开，蝴蝶自来。</div>
-        <div class="text2">年轻，就要醒着拼。</div>
         <div class="nav">
             <a name="top"></a>
             <div class="container">
                 <div class="nav-left">
                      MY PROFILE
-                </div>
-                <div class="nav-right">
-                    <ul class="big">
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Gallery</a></li>
-                        <li><a href="">Protfolio</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Home</a></li>
-                    </ul>
-                    <ul class="small">
-                        <li><a href="">&#xe60e;</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -42,48 +30,39 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="skill-left">
                 <div></div>
-                <p>Gordon</p>
-                <p>Web Designer</p>
-                <p>
-                    <a href="">&#xe601;</a>
-                    <a href="">&#xe600;</a>
-                    <a href="">&#xe606;</a>
+                <p>张囡</p>
+                <p>前端工程师</p>
+                <p class="contacts">
+                    <a href="" class="weixin">&#xe601;</a>
+                    <a href="" class="qq">&#xe606;</a>
                 </p>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" id="skill-right">
                 <p>My Skill Info</p>
-                <p>
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </p>
-                <ul>
+                <ul class="skills">
                     <li>
-                        <p>PS</p>
-                        <div>
-                            <div class="bar1"></div>
-                        </div>
-                        <p>68%</p>
+                        <span>H5</span>
                     </li>
                     <li>
-                        <p>AI</p>
-                        <div>
-                            <div class="bar2"></div>
-                        </div>
-                        <p>52%</p>
+                        <span>CSS3</span>
                     </li>
                     <li>
-                        <p>HTML</p>
-                        <div>
-                            <div class="bar3"></div>
-                        </div>
-                        <p>85%</p>
+                        <span>javascript</span>
                     </li>
                     <li>
-                        <p>CSS</p>
-                        <div>
-                            <div class="bar4"></div>
-                        </div>
-                        <p>76%</p>
+                        <span>jquery</span>
+                    </li>
+                    <li>
+                        <span>bootstrap</span>
+                    </li>
+                    <li>
+                        <span>Ajax</span>
+                    </li>
+                    <li>
+                        <span>angular</span>
+                    </li>
+                    <li>
+                        <span>PS</span>
                     </li>
                 </ul>
             </div>
@@ -95,13 +74,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
-                <a href="" class="more">+ more</a>
+                <img src="img/P1.png" alt="">
+                <a href="http://226b98.duapp.com" class="more">+ more</a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
-                <a href="" class="more">+ more</a>
+                <img src="img/P2.png" alt="">
+                <a href="http://slumber.duapp.com" class="more">+ more</a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
-                <a href="" class="more">+ more</a>
+                <img src="img/P3.png" alt="">
+                <a href="https://cushaw.github.io/waimai/zn_index.html" class="more">+ more</a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
                 <a href="" class="more">+ more</a>
