--- a/zn.html
+++ b/zn.html
@@ -86,13 +86,8 @@
                 <a href="https://cushaw.github.io/waimai/zn_index.html" class="more">+ more</a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
-                <a href="" class="more">+ more</a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
-                <a href="" class="more">+ more</a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
-                <a href="" class="more">+ more</a>
+                <img src="img/P4.png" alt="">
+                <a href="http://znnew2345.duapp.com/news/index/index.php" class="more">+ more</a>
             </div>
         </div>
     </div>
