--- a/zn.html
+++ b/zn.html
@@ -18,14 +18,14 @@
             <a name="top"></a>
             <div class="container">
                 <div class="nav-left">
-                     MY PROFILE
+                    MY PROFILE
                 </div>
             </div>
         </div>
     </div>
     <!--banner结束-->
     <!--skill开始-->
-    <p class="text">My Skills</p>
+    <p class="text">我的技能</p>
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="skill-left">
@@ -33,21 +33,21 @@
                 <p>张囡</p>
                 <p>前端工程师</p>
                 <p class="contacts">
-                    <a href="" class="weixin">&#xe601;</a>
-                    <a href="" class="qq">&#xe606;</a>
+                    <a class="weixin">&#xe601;</a>
+                    <a class="qq">&#xe606;</a>
                 </p>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" id="skill-right">
                 <p>My Skill Info</p>
                 <ul class="skills">
                     <li>
-                        <span>H5</span>
+                        <span>HTML</span>
                     </li>
                     <li>
-                        <span>CSS3</span>
+                        <span>CSS</span>
                     </li>
                     <li>
-                        <span>javascript</span>
+                        <span>JS</span>
                     </li>
                     <li>
                         <span>jquery</span>
@@ -70,24 +70,57 @@
     </div>
     <!--skill结束-->
     <!--protfolio开始-->
-    <p class="text">My Portfolio</p>
+    <p class="text">我的项目</p>
     <div class="container">
         <div class="row">
+        	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
+                <img src="img/p5.jpg" alt="">
+                <div class="proconbox">
+                	<span class="procontext">广告云集</span>
+                	<a href="http://www.yunji518.com" class="more" target="_blank">+ more</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
+                <img src="img/p6.jpg" alt="">
+                <div class="proconbox">
+                	<span class="procontext">体彩助手</span>
+                	<a href="http://www.jcblc.com" class="more" target="_blank">+ more</a>
+                </div>
+            </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
                 <img src="img/P1.png" alt="">
-                <a href="http://226b98.duapp.com" class="more">+ more</a>
+                <div class="proconbox">
+                	<span class="procontext">自由自载</span>
+                </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
                 <img src="img/P2.png" alt="">
-                <a href="http://slumber.duapp.com" class="more">+ more</a>
+                <div class="proconbox">
+                	<span class="procontext">艺聘</span>
+                	<!--<a href="http://slumber.duapp.com" class="more">+ more</a>-->
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
+                <img src="img/p7.png" alt="">
+                <div class="proconbox">
+                	<span class="procontext">非情报</span>
+                	<a href="http://www.feiqb.com" class="more" target="_blank">+ more</a>
+                </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
                 <img src="img/P3.png" alt="">
-                <a href="https://cushaw.github.io/waimai/zn_index.html" class="more">+ more</a>
+                <div class="proconbox">
+                	<span class="procontext">i食界</span>
+                	<!--<a href="https://cushaw.github.io/waimai/zn_index.html" class="more">+ more</a>-->
+            
+                </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 protfolio">
                 <img src="img/P4.png" alt="">
-                <a href="http://znnew2345.duapp.com/news/index/index.php" class="more">+ more</a>
+                <div class="proconbox">
+                	<span class="procontext">世界奇异录</span>
+                	<!--<a href="http://znnew2345.duapp.com/news/index/index.php" class="more">+ more</a>-->
+                </div>
             </div>
         </div>
     </div>
