--- a/zn.html
+++ b/zn.html
@@ -126,10 +126,7 @@
     </div>
     <!--protfolio结束-->
     <!--联系开始-->
-    <p class="text">Get in touch</p>
-    <p class="text2">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    </p>
+    <p class="text">联系方式</p>
     <div class="container footer">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 touch">
